--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.3",
+    "react-native-gifted-chat": "^0.7.2",
     "react-native-router-flux": "^4.0.6"
   },
   "devDependencies": {
